# fishrace

./: .envrc  .venv  README.md  fishrace.py  names.txt  pyproject.toml
utils/: utils.py
