[tool.poetry]
name = "fishrace"
description = "race some fish"
readme = "README.md"
authors = ["Dan Porter"]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.8"

# Packages included for bootstrapping a project from a template
# Feel free to delete this group after cookiecutting a project
colorama = "^0.4.6"
ruff = "^0.4.3"
isort = "^5.13.2"
[tool.poetry.group.template-bootstrap]
optional = true

[tool.poetry.group.template-bootstrap.dependencies]
columbo = ">=0.13.0.post1"
cookiecutter = ">=2.1.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
